--- a/pom.xml
+++ b/pom.xml
@@ -1,15 +1,11 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
   <modelVersion>4.0.0</modelVersion>
-	<parent>
-		<groupId>de.flapdoodle.p</groupId>
-  	<artifactId>de.flapdoodle.p--pom</artifactId>
-	  <version>1.1-SNAPSHOT</version>
-	</parent>
 
-  <groupId>de.flapdoodle.p</groupId>
-  <artifactId>de.flapdoodle.p--mongoom</artifactId>
-  <name>* ${pom.artifactId} (Projekt P - Mongo OM)</name>
+  <groupId>de.flapdoodle.mongoom</groupId>
+  <artifactId>de.flapdoodle.mongoom</artifactId>
+  <version>1.0-SNAPSHOT</version>
+  <name>(Flapdoodle MongoDB ObjectMapper)</name>
 
 	<!--
 		https://docs.sonatype.org/display/Repository/Central+Sync+Requirements 
@@ -17,6 +13,38 @@
 	 -->
   <build>
 		<plugins>
+
+			<plugin>
+				<artifactId>maven-compiler-plugin</artifactId>
+				<configuration>
+					<source>1.6</source>
+					<target>1.6</target>
+					<encoding>UTF-8</encoding>
+				</configuration>
+			</plugin>
+
+      <plugin>
+        <groupId>org.apache.maven.plugins</groupId>
+        <artifactId>maven-resources-plugin</artifactId>
+        <configuration>
+          <encoding>UTF-8</encoding>
+        </configuration>
+      </plugin>
+
+      <plugin>
+        <groupId>org.apache.maven.plugins</groupId>
+        <artifactId>maven-source-plugin</artifactId>
+        <executions>
+          <execution>
+            <id>attach-sources</id>
+            <phase>verify</phase>
+            <goals>
+              <goal>jar</goal>
+            </goals>
+          </execution>
+        </executions>
+      </plugin>
+
 			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-surefire-plugin</artifactId>
@@ -89,22 +117,17 @@
 	</build>
 
   <dependencies>
-    <dependency>
-      <groupId>de.flapdoodle</groupId>
-      <artifactId>de.flapdoodle--logging</artifactId>
-			<version>1.5.md-SNAPSHOT</version>
-    </dependency>
-    <dependency>
-      <groupId>de.flapdoodle</groupId>
-      <artifactId>de.flapdoodle--base</artifactId>
-			<version>1.5.md-SNAPSHOT</version>
-    </dependency>
-
-		<!-- guice -->
 		<dependency>
-		  <groupId>de.flapdoodle.dependency</groupId>
-		  <artifactId>de.flapdoodle.dependency--google-guice</artifactId>
-      <version>1.3.dp-SNAPSHOT</version>
+			<groupId>junit</groupId>
+			<artifactId>junit</artifactId>
+			<version>3.8.1</version>
+			<scope>test</scope>
+		</dependency>
+
+		<dependency>
+			<groupId>com.google.inject</groupId>
+			<artifactId>guice</artifactId>
+			<version>2.0</version>
 			<scope>test</scope>
 		</dependency>
 
@@ -113,14 +136,6 @@
 			<artifactId>mongo-java-driver</artifactId>
 			<version>2.0</version>
 		</dependency>
-
-<!--
-    <dependency>
-      <groupId>de.flapdoodle.dependency</groupId>
-      <artifactId>de.flapdoodle.dependency- -cglib</artifactId>
-      <version>1.3.dp-SNAPSHOT</version>
-    </dependency>
--->
   </dependencies>
 
 </project>
