--- a/pom.xml
+++ b/pom.xml
@@ -1,11 +1,26 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
-  <modelVersion>4.0.0</modelVersion>
 
+  <modelVersion>4.0.0</modelVersion>
   <groupId>de.flapdoodle.mongoom</groupId>
   <artifactId>de.flapdoodle.mongoom</artifactId>
+  <name>Flapdoodle MongoDB ObjectMapper</name>
   <version>1.0-SNAPSHOT</version>
-  <name>(Flapdoodle MongoDB ObjectMapper)</name>
+
+	<description>A mongodb object mapper supporting most mongodb features, like multikey index, typesafe query ...</description>
+  <url>http://mongoom.flapdoodle.de</url>
+
+  <licenses>
+    <license>
+      <name>The Apache Software License, Version 2.0</name>
+      <url>http://www.apache.org/licenses/LICENSE-2.0.txt</url>
+      <distribution>repo</distribution>
+    </license>
+  </licenses>
+  <scm>
+    <url>git://github.com/michaelmosmann/mongoom.flapdoodle.de.git</url>
+    <connection>git://github.com/michaelmosmann/mongoom.flapdoodle.de.git</connection>
+	</scm>
 
 	<!--
 		https://docs.sonatype.org/display/Repository/Central+Sync+Requirements 
