--- a/pom.xml
+++ b/pom.xml
@@ -8,7 +8,7 @@
   <version>1.0-SNAPSHOT</version>
 
 	<description>A mongodb object mapper supporting most mongodb features, like multikey index, typesafe query ...</description>
-  <url>http://mongoom.flapdoodle.de</url>
+  <url>http://github.com/michaelmosmann/mongoom.flapdoodle.de</url>
 
   <licenses>
     <license>
@@ -17,10 +17,14 @@
       <distribution>repo</distribution>
     </license>
   </licenses>
-  <scm>
-    <url>git://github.com/michaelmosmann/mongoom.flapdoodle.de.git</url>
-    <connection>git://github.com/michaelmosmann/mongoom.flapdoodle.de.git</connection>
-	</scm>
+
+
+
+	<scm>
+    <connection>scm:git:git@github.com:michaelmosmann/mongoom.flapdoodle.de.git</connection>
+    <developerConnection>scm:git:git@github.com:michaelmosmann/mongoom.flapdoodle.de.git</developerConnection>
+    <url>git@github.com:michaelmosmann/mongoom.flapdoodle.de.git</url>
+  </scm>
 
 	<!--
 		https://docs.sonatype.org/display/Repository/Central+Sync+Requirements 
