--- a/pom.xml
+++ b/pom.xml
@@ -77,6 +77,7 @@
 				<configuration>
 					<excludes>
 						<exclude>**/live/**</exclude>
+						<exclude>**/examples/**</exclude>
 					</excludes>
 				</configuration>
 			</plugin>
