--- a/pom.xml
+++ b/pom.xml
@@ -1,6 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
 
 	<parent>
 		<groupId>org.sonatype.oss</groupId>
@@ -12,7 +11,7 @@
 	<groupId>de.flapdoodle.mongoom</groupId>
 	<artifactId>de.flapdoodle.mongoom</artifactId>
 	<name>Flapdoodle MongoDB ObjectMapper</name>
-	<version>1.1-SNAPSHOT</version>
+	<version>1.1</version>
 
 	<description>A mongodb object mapper supporting most mongodb features, like multikey index, typesafe query ...</description>
 	<url>http://github.com/michaelmosmann/mongoom.flapdoodle.de</url>
