--- a/pom.xml
+++ b/pom.xml
@@ -71,6 +71,7 @@
 				</executions>
 			</plugin>
 
+<!--
 			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-surefire-plugin</artifactId>
@@ -81,7 +82,7 @@
 					</excludes>
 				</configuration>
 			</plugin>
-
+-->
 			<plugin>
 				<groupId>com.mycila.maven-license-plugin</groupId>
 				<artifactId>maven-license-plugin</artifactId>
@@ -181,6 +182,14 @@
 			<version>2.0</version>
 			<scope>test</scope>
 		</dependency>
+
+		<dependency>
+			<groupId>de.flapdoodle.embedmongo</groupId>
+			<artifactId>de.flapdoodle.embedmongo</artifactId>
+			<version>1.4-SNAPSHOT</version>
+			<scope>test</scope>
+		</dependency>
+
 
 		<dependency>
 			<groupId>com.google.guava</groupId>
