--- a/pom.xml
+++ b/pom.xml
@@ -11,7 +11,7 @@
 	<groupId>de.flapdoodle.mongoom</groupId>
 	<artifactId>de.flapdoodle.mongoom</artifactId>
 	<name>Flapdoodle MongoDB ObjectMapper</name>
-	<version>1.2-SNAPSHOT</version>
+	<version>1.2</version>
 
 	<description>A mongodb object mapper supporting most mongodb features, like multikey index, typesafe query ...</description>
 	<url>http://github.com/michaelmosmann/mongoom.flapdoodle.de</url>
@@ -186,7 +186,7 @@
 		<dependency>
 			<groupId>de.flapdoodle.embedmongo</groupId>
 			<artifactId>de.flapdoodle.embedmongo</artifactId>
-			<version>1.6-SNAPSHOT</version>
+			<version>1.6</version>
 			<scope>test</scope>
 		</dependency>
 
