--- a/pom.xml
+++ b/pom.xml
@@ -190,6 +190,11 @@
 			<scope>test</scope>
 		</dependency>
 
+		<dependency>
+			<groupId>com.fasterxml</groupId>
+			<artifactId>classmate</artifactId>
+			<version>0.5.4</version>
+		</dependency>
 
 		<dependency>
 			<groupId>com.google.guava</groupId>
